Detail activity layout

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ repositories {
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
         applicationId "com.udacity.stockhawk"
@@ -31,6 +31,9 @@ android {
             proguardFile "proguard-support-v7-appcompat.pro"
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+    buildTypes.each {
+        it.buildConfigField 'String', 'QUANDL_KEY', '""'
     }
 
     //noinspection GroovyMissingReturnStatement
