--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,10 @@
+buildscript {
+    ext{
+        supportLibVersion = "25.3.0"
+        butterKnifeVersion = "8.8.0"
+    }
+}
+
 apply plugin: 'com.android.application'
 apply plugin: 'com.noveogroup.android.check'
 
@@ -59,11 +66,11 @@ check {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:25.3.0'
-    compile 'com.android.support:recyclerview-v7:25.3.0'
-    compile 'com.android.support:design:25.3.0'
-    compile 'com.jakewharton:butterknife:8.8.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.0'
+    compile "com.android.support:appcompat-v7:${supportLibVersion}"
+    compile "com.android.support:recyclerview-v7:${supportLibVersion}"
+    compile "com.android.support:design:${supportLibVersion}"
+    compile "com.jakewharton:butterknife:${butterKnifeVersion}"
+    annotationProcessor "com.jakewharton:butterknife-compiler:${butterKnifeVersion}"
 
     compile 'com.google.guava:guava:20.0'
 
